--- a/sip-servlets-examples/shopping-demo/web/pom.xml
+++ b/sip-servlets-examples/shopping-demo/web/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>shopping-demo-parent</artifactId>
-		<version>1.2-SNAPSHOT</version>
+		<version>1.2</version>
 	</parent>
 	<artifactId>shopping-demo-web</artifactId>
 	<packaging>war</packaging>
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.example</groupId>
 			<artifactId>shopping-demo-business</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<version>1.2</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -30,7 +30,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.8-SNAPSHOT</version>
+			<version>1.1.8</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- logging dependency -->
