--- a/sip-servlets-test-suite/applications/shootme-sip-servlet-auth/pom.xml
+++ b/sip-servlets-test-suite/applications/shootme-sip-servlet-auth/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-test-suite-applications</artifactId>
-		<version>0.8-SNAPSHOT</version>
+		<version>0.8</version>
 	</parent>
 	<artifactId>shootme-sip-servlet-auth</artifactId>
 	<packaging>war</packaging>
