--- a/sip-servlets-test-suite/pom.xml
+++ b/sip-servlets-test-suite/pom.xml
@@ -3,13 +3,13 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>0.8-SNAPSHOT</version>
+		<version>0.8</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-test-suite-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>0.8-SNAPSHOT</version>
+	<version>0.8</version>
 	<name>sip-servlets-test-suite-parent</name>
 	<url>http://www.mobicents.org/tests.html</url>
 	<modules>
