[maven-release-plugin] prepare for next development iteration
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4741 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/jslee-sips-interop/sips/ear/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/sips/ear/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>jslee-sips-interop-demo-sips-parent</artifactId>
-		<version>1.2</version>
+		<version>1.3-SNAPSHOT</version>
 	</parent>
 	<artifactId>jslee-sips-interop-demo-sips-ear</artifactId>
 	<packaging>ear</packaging>
@@ -66,7 +66,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.example</groupId>
 			<artifactId>jslee-sips-interop-demo-sips-web</artifactId>
-			<version>1.2</version>
+			<version>1.3-SNAPSHOT</version>
 			<type>war</type>
 		</dependency>
 		<dependency>
