deleting index.html to avoid overriding the mobicents homepage in the future
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4743 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/pom.xml
+++ b/sip-servlets-bootstrap/pom.xml
@@ -156,6 +156,7 @@
 								<configuration>
 									<tasks>
 										<copy verbose="true" file="${project.build.directory}/site/index.html" tofile="${project.build.directory}/site/products_sip_servlets.html" />
+										<delete file="${project.build.directory}/site/index.html"/>
 									</tasks>
 								</configuration>
 								<goals>
