--- a/sip-servlets-seam/entrypoint/.classpath
+++ b/sip-servlets-seam/entrypoint/.classpath
@@ -1,27 +1,29 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry kind="src" path="src/main/java"/>
-  <classpathentry kind="output" path="target/classes"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-  <classpathentry kind="var" path="M2_REPO/commons-beanutils/commons-beanutils/1.7.0/commons-beanutils-1.7.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/concurrent/concurrent/1.3.4/concurrent-1.3.4.jar"/>
-  <classpathentry kind="var" path="M2_REPO/dom4j/dom4j/1.6.1-brew/dom4j-1.6.1-brew.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/el/el-api/1.0/el-api-1.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/lowagie/itext/2.1.2/itext-2.1.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/lowagie/itext-rtf/2.1.2/itext-rtf-2.1.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jboss/el/jboss-el/1.0_02.CR2/jboss-el-1.0_02.CR2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jboss/seam/jboss-seam/2.1.0.SP1/jboss-seam-2.1.0.SP1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jboss/seam/jboss-seam-debug/2.1.0.SP1/jboss-seam-debug-2.1.0.SP1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jboss/seam/jboss-seam-ioc/2.1.0.SP1/jboss-seam-ioc-2.1.0.SP1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jboss/seam/jboss-seam-jul/2.1.0.SP1/jboss-seam-jul-2.1.0.SP1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jboss/seam/jboss-seam-mail/2.1.0.SP1/jboss-seam-mail-2.1.0.SP1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jboss/seam/jboss-seam-pdf/2.1.0.SP1/jboss-seam-pdf-2.1.0.SP1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jboss/seam/jboss-seam-remoting/2.1.0.SP1/jboss-seam-remoting-2.1.0.SP1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jboss/seam/jboss-seam-ui/2.1.0.SP1/jboss-seam-ui-2.1.0.SP1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/sun/facelets/jsf-facelets/1.1.15.B1/jsf-facelets-1.1.15.B1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.14/log4j-1.2.14.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/servers/media/mobicents-media-server-constants/1.0.0.CR3/mobicents-media-server-constants-1.0.0.CR3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/servers/media/mobicents-media-server-msc-api/1.0.0.CR3/mobicents-media-server-msc-api-1.0.0.CR3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/servers/media/mobicents-media-server-msc-api-local-impl/1.0.0.CR3/mobicents-media-server-msc-api-local-impl-1.0.0.CR3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.5/servlet-api-2.5.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/servlet/sip/sip-servlets-spec/1.1.6/sip-servlets-spec-1.1.6.jar"/>
+	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="var" path="M2_REPO/commons-beanutils/commons-beanutils/1.7.0/commons-beanutils-1.7.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/concurrent/concurrent/1.3.4/concurrent-1.3.4.jar"/>
+	<classpathentry kind="var" path="M2_REPO/dom4j/dom4j/1.6.1-brew/dom4j-1.6.1-brew.jar"/>
+	<classpathentry kind="var" path="M2_REPO/javax/el/el-api/1.0/el-api-1.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/lowagie/itext/2.1.2/itext-2.1.2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/lowagie/itext-rtf/2.1.2/itext-rtf-2.1.2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jboss/el/jboss-el/1.0_02.CR2/jboss-el-1.0_02.CR2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jboss/seam/jboss-seam/2.1.0.SP1/jboss-seam-2.1.0.SP1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jboss/seam/jboss-seam-debug/2.1.0.SP1/jboss-seam-debug-2.1.0.SP1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jboss/seam/jboss-seam-ioc/2.1.0.SP1/jboss-seam-ioc-2.1.0.SP1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jboss/seam/jboss-seam-jul/2.1.0.SP1/jboss-seam-jul-2.1.0.SP1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jboss/seam/jboss-seam-mail/2.1.0.SP1/jboss-seam-mail-2.1.0.SP1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jboss/seam/jboss-seam-pdf/2.1.0.SP1/jboss-seam-pdf-2.1.0.SP1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jboss/seam/jboss-seam-remoting/2.1.0.SP1/jboss-seam-remoting-2.1.0.SP1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jboss/seam/jboss-seam-ui/2.1.0.SP1/jboss-seam-ui-2.1.0.SP1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/sun/facelets/jsf-facelets/1.1.15.B1/jsf-facelets-1.1.15.B1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.14/log4j-1.2.14.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mobicents/servers/media/mobicents-media-server-constants/1.0.0.CR3/mobicents-media-server-constants-1.0.0.CR3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mobicents/servers/media/mobicents-media-server-msc-api/1.0.0.CR3/mobicents-media-server-msc-api-1.0.0.CR3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mobicents/servers/media/mobicents-media-server-msc-api-local-impl/1.0.0.CR3/mobicents-media-server-msc-api-local-impl-1.0.0.CR3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.5/servlet-api-2.5.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mobicents/servlet/sip/sip-servlets-spec/1.1.6/sip-servlets-spec-1.1.6.jar"/>
+	<classpathentry kind="var" path="M2_REPO/javax/faces/jsf-api/1.2_12/jsf-api-1.2_12.jar"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
