--- a/sip-servlets-examples/call-blocking/pom.xml
+++ b/sip-servlets-examples/call-blocking/pom.xml
@@ -25,10 +25,12 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
+				<version>2.1-alpha-2</version> 
 				<configuration>
 					<warSourceDirectory>
 						${basedir}/src/main/sipapp
-					</warSourceDirectory>
+					</warSourceDirectory>					
+					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
 		</plugins>		
