Update the Sip Servlets core plugin with router config.
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5012 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-eclipse-plugin/sip-servlets-eclipse-core-plugin/plugin.xml
+++ b/sip-servlets-eclipse-plugin/sip-servlets-eclipse-core-plugin/plugin.xml
@@ -80,5 +80,12 @@
 		</wizard-pages>
 	</extension>
 
+   
+
+<extension point="org.eclipse.wst.server.ui.editorPages">
+	<page id="com.mobicents.router.page" order="20" name="Sip Servlets Management" typeIds="*"
+		class="org.mobicents.sip.servlet.tooling.wst.server.ui.editor.ApplicationRouterEditorPart"/>
+</extension>
+
 
 </plugin>
