--- a/sip-servlets-eclipse-plugin/sip-servlets-eclipse-core-plugin/templates/main.servlet.java.template
+++ b/sip-servlets-eclipse-plugin/sip-servlets-eclipse-core-plugin/templates/main.servlet.java.template
@@ -1,7 +1,14 @@
 package ___MAIN_SERVLET_PACKAGE___;
 
 import javax.servlet.sip.SipServlet;
+import javax.servlet.sip.SipServletRequest;
 
 public class ___MAIN_SERVLET_CLASSNAME___ extends SipServlet {
-
+	public void doInvite(SipServletRequest request) {
+		// TODO: Add logic
+	}
+	
+	public void doBye(SipServletRequest request) {
+		// TODO: Add logic
+	}
 }
