--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -367,7 +367,7 @@
 			<fileset dir="${docs.stage.dir}/common" />
 		</move-->
 		
-		<symlink overwrite="true" link="${docs.stage.dir}/media/en-US/Common_Content" resource="${docs.stage.dir}/common"/>
+		<!--symlink overwrite="true" link="${docs.stage.dir}/media/en-US/Common_Content" resource="${docs.stage.dir}/common"/>
 		<symlink overwrite="true" link="${docs.stage.dir}/sip-servlets/en-US/Common_Content" resource="${docs.stage.dir}/common"/>
 		
 		<exec executable="${mvn.executable}" dir="${docs.stage.dir}/media/">
@@ -382,7 +382,7 @@
 		</copy>
 		<copy overwrite="true" todir="${jboss.home}/docs/mobicents-sip-servlets">
 			<fileset dir="${docs.stage.dir}/sip-servlets/target/docbook/publish/en-US/" />
-		</copy>
+		</copy-->
 		
 		<!--delete dir="${docs.stage.dir}" /-->
 	</target>
