Fix for Issue 622 : Move to JBoss AS 5.0.1.GA
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5099 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-jboss5/.project
+++ b/sip-servlets-jboss5/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>sip-servlets-jboss5</name>
+  <name>sip-servlets-jboss-4.2.x</name>
   <comment/>
   <projects/>
   <buildSpec>
