--- a/sip-servlets-test-suite/.classpath
+++ b/sip-servlets-test-suite/.classpath
@@ -32,12 +32,12 @@
 	<classpathentry kind="src" output="applications/annotated-servlet/src/main/sipapp/WEB-INF/classes" path="applications/annotated-servlet/src/main/java"/>
 	<classpathentry kind="src" output="testsuite/target/classes" path="testsuite/src/main/java"/>
 	<classpathentry kind="src" path="testsuite/src/test/resources"/>
-	<classpathentry kind="src" path="testsuite/src/test/java"/> 
+	<classpathentry kind="src" path="testsuite/src/test/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-spec"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-impl"/>
 	<classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-api/1.2/jain-sip-api-1.2.jar"/>
-	<classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-ri/1.2.90/jain-sip-ri-1.2.90.jar"/>
+	<classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-ri/1.2.96/jain-sip-ri-1.2.96.jar"/>
 	<classpathentry kind="var" path="M2_REPO/concurrent/concurrent/1.3.4/concurrent-1.3.4.jar"/>
 	<classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar"/>
@@ -46,10 +46,11 @@
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/coyote/6.0.14/coyote-6.0.14.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/servlet-api/6.0.14/servlet-api-6.0.14.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/annotations-api/6.0.14/annotations-api-6.0.14.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/mobicents/tools/sip-balancer/1.0.BETA3/sip-balancer-1.0.BETA3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mobicents/tools/sip-balancer/1.0.BETA3/sip-balancer-1.0.BETA3.jar" sourcepath="/SIP_BALANCER/src/main/java"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-application-router"/>
 	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.12/log4j-1.2.12.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-tomcat-jboss4"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-annotations"/>	
+	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-annotations"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sip-balancer"/>
 	<classpathentry kind="output" path="testsuite/target/test-classes"/>
 </classpath>
