--- a/sip-servlets-test-suite/testsuite/.classpath
+++ b/sip-servlets-test-suite/testsuite/.classpath
@@ -13,7 +13,7 @@
   <classpathentry kind="var" path="M2_REPO/concurrent/concurrent/1.3.4/concurrent-1.3.4.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/servlet/jsp-api/2.0/jsp-api-2.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-api/1.2/jain-sip-api-1.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-ri/1.2.90/jain-sip-ri-1.2.90.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-ri/1.2.96/jain-sip-ri-1.2.96.jar"/>
   <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar" sourcepath="M2_REPO/junit/junit/3.8.1/junit-3.8.1-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/catalina/6.0.14/catalina-6.0.14.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/servlet-api/6.0.14/servlet-api-6.0.14.jar"/>
@@ -24,5 +24,6 @@
   <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/jsp-api/6.0.14/jsp-api-6.0.14.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/el-api/6.0.14/el-api-6.0.14.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/jasper-jdt/6.0.14/jasper-jdt-6.0.14.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/jasper-el/6.0.14/jasper-el-6.0.14.jar"/>  
+  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/jasper-el/6.0.14/jasper-el-6.0.14.jar"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/jain-sip"/>  
 </classpath>
