moving to mms 1.0.0.GA
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5126 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/pom.xml
+++ b/sip-servlets-examples/pom.xml
@@ -37,7 +37,7 @@
 
 	<properties>
 		<!-- MOBICENTS MEDIA SERVER VERSIONS -->
-		<mms.version>1.0.0.CR5</mms.version>
+		<mms.version>1.0.0.GA</mms.version>
 	</properties>
 
 	<dependencies>
