--- a/sip-servlets-seam/entrypoint/pom.xml
+++ b/sip-servlets-seam/entrypoint/pom.xml
@@ -16,7 +16,7 @@
 	</repositories>
 	<properties>
 		<seam.version>2.1.1.GA</seam.version>
-		<media.server.version>1.0.0.CR5</media.server.version>
+		<media.server.version>1.0.0.GA</media.server.version>
 	</properties>
 	<build>
 		<plugins>
