--- a/sip-servlets-seam/ipbx/.settings/org.eclipse.jst.common.project.facet.core.prefs
+++ b/sip-servlets-seam/ipbx/.settings/org.eclipse.jst.common.project.facet.core.prefs
@@ -1,4 +1,5 @@
-#Sun Jan 18 21:28:08 EET 2009
-classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:j2sdk1.6-sun/owners=jst.java\:5.0
-classpath.helper/org.eclipse.jst.server.core.container\:\:org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget\:\:JBoss\ 4.2\ Runtime/owners=jst.seam\:2.1;jst.web\:2.5;jst.jsf\:1.2
+#Tue Mar 17 01:10:20 EET 2009
+classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:java-6-openjdk/owners=jst.java\:5.0
+classpath.helper/org.eclipse.jst.server.core.container\:\:org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget\:\:JBoss\ 4.2\ Runtime/owners=jst.seam\:2.1
+classpath.helper/org.eclipse.jst.server.core.container\:\:org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget\:\:MSS09/owners=jst.web\:2.5;jst.jsf\:1.2
 eclipse.preferences.version=1
