Update version number
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5172 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/entrypoint/pom.xml
+++ b/sip-servlets-seam/entrypoint/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mobicents.servlet.seam</groupId>
 	<artifactId>sip-servlets-seam-entrypoint</artifactId>
-	<version>1.0</version>
+	<version>2.0-SNAPSHOT</version>
 	<name>Sip Servlets Seam Entrypoint Project</name>
 	<packaging>jar</packaging>
 	<repositories>
