updating the scripts to latest sip lb
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5270 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -86,9 +86,10 @@
 		<dependency>
 			<groupId>org.mobicents.tools</groupId>
 			<artifactId>sip-balancer</artifactId>
-			<version>1.0.BETA3</version>
+			<version>1.0.BETA4-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
+	
 	<build>
 		<plugins>		
 			<plugin>
@@ -103,8 +104,8 @@
 					<eclipseProjectName>sip-servlets-impl</eclipseProjectName>
 				</configuration>
 			</plugin>
-		</plugins>
-	</build>
+		</plugins>		
+	</build>	
 	<profiles>
 			<profile>			
 			<id>tomcat-distro</id>
