--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -87,6 +87,7 @@
 			<groupId>org.mobicents.tools</groupId>
 			<artifactId>sip-balancer</artifactId>
 			<version>1.0.BETA4-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	
