--- a/sip-servlets-jboss5/.project
+++ b/sip-servlets-jboss5/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>sip-servlets-jboss-4.2.x</name>
+  <name>sip-servlets-jboss-5</name>
   <comment/>
   <projects/>
   <buildSpec>
