--- a/sip-servlets-tomcat-jboss4/pom.xml
+++ b/sip-servlets-tomcat-jboss4/pom.xml
@@ -77,6 +77,7 @@
 			<version>${jboss.version}</version>
 			<scope>system</scope>
 			<systemPath>${basedir}/lib/jbossweb-service-4.2.3.GA.jar</systemPath>
+			<optional>true</optional>
 		</dependency>
 		
 		<dependency>
