adding javax.annotation dep to c2c HA example
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5315 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/click2call-distributable/pom.xml
+++ b/sip-servlets-examples/click2call-distributable/pom.xml
@@ -12,6 +12,13 @@
 	<version>1.3-SNAPSHOT</version>
 	<name>Distributable Click2Call Converged Sip Servlet Example</name>
 	<url>http://www.mobicents.org/examples.html</url>
+	<dependencies>
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>jsr250-api</artifactId>
+			<version>1.0</version>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
