--- a/sip-servlets-examples/click2call-distributable/pom.xml
+++ b/sip-servlets-examples/click2call-distributable/pom.xml
@@ -17,6 +17,7 @@
 			<groupId>javax.annotation</groupId>
 			<artifactId>jsr250-api</artifactId>
 			<version>1.0</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<build>
