--- a/sip-servlets-jboss5-metadata/pom.xml
+++ b/sip-servlets-jboss5-metadata/pom.xml
@@ -26,6 +26,13 @@
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
+			<artifactId>sip-servlets-impl</artifactId>
+			<version>0.9-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-annotations</artifactId>
 			<version>0.9-SNAPSHOT</version>
 			<scope>provided</scope>
