--- a/sip-servlets-seam/media-framework-demo/pom.xml
+++ b/sip-servlets-seam/media-framework-demo/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mobicents.servlet.seam</groupId>
-	<artifactId>sip-servlets-seam-media-framework-demo</artifactId>
-	<version>1.0</version>
-	<name>Sip Servlets Seam Media Framework Demo Project</name>
+	<artifactId>sip-servlets-seam-telco-framework-media-demo</artifactId>
+	<version>2.0</version>
+	<name>Sip Servlets Seam Telco Framework Media Demo Project</name>
 	<packaging>war</packaging>
 	<repositories>
 		<repository>
@@ -88,7 +88,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.seam</groupId>
 			<artifactId>sip-servlets-seam-entrypoint</artifactId>
-			<version>1.0</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
