Small up in STF
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5384 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/entrypoint/pom.xml
+++ b/sip-servlets-seam/entrypoint/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.mobicents.servlet.seam</groupId>
 	<artifactId>sip-servlets-seam-entrypoint</artifactId>
 	<version>2.0-SNAPSHOT</version>
-	<name>Sip Servlets Seam Entrypoint Project</name>
+	<name>Sip Servlets Seam Telco Framework Entrypoint Project</name>
 	<packaging>jar</packaging>
 	<repositories>
 		<repository>
