Fix + non regression tests for Issue 651
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5389 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/applications/pom.xml
+++ b/sip-servlets-test-suite/applications/pom.xml
@@ -38,6 +38,8 @@
 		<module>publish-sip-servlet</module>
 		<module>join-sip-servlet</module>
 		<module>replaces-sip-servlet</module>
+		<module>no-app-name-servlet</module>
+		<module>no-main-servlet-app</module>
 	</modules>
 	<dependencies>
 		<!-- test dependencies -->
