updating war plugin version
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5402 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/pom.xml
+++ b/sip-servlets-examples/pom.xml
@@ -38,6 +38,7 @@
 	<properties>
 		<!-- MOBICENTS MEDIA SERVER VERSIONS -->
 		<mms.version>1.0.0.GA</mms.version>
+                <war.plugin.version>2.1-beta-1</war.plugin.version>
 	</properties>
 
 	<dependencies>
