Fix for Issue 652
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5405 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/.classpath
+++ b/sip-servlets-test-suite/.classpath
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" output="applications/simple-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/simple-sip-servlet/src/main/java"/>
+	<classpathentry kind="src" output="applications/same-instance-servlet/src/main/sipapp/WEB-INF/classes" path="applications/same-instance-servlet/src/main/java"/>
+	<classpathentry kind="src" output="applications/no-main-servlet-app/src/main/sipapp/WEB-INF/classes" path="applications/no-main-servlet-app/src/main/java"/>
+	<classpathentry kind="src" output="applications/no-app-name-servlet/src/main/sipapp/WEB-INF/classes" path="applications/no-app-name-servlet/src/main/java"/>
 	<classpathentry kind="src" output="applications/replaces-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/replaces-sip-servlet/src/main/java"/>
 	<classpathentry kind="src" output="applications/join-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/join-sip-servlet/src/main/java"/>
 	<classpathentry kind="src" output="applications/deploy-test-app/src/main/sipapp/WEB-INF/classes" path="applications/deploy-test-app/src/main/java"/>
@@ -46,7 +49,6 @@
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/coyote/6.0.14/coyote-6.0.14.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/servlet-api/6.0.14/servlet-api-6.0.14.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/annotations-api/6.0.14/annotations-api-6.0.14.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/mobicents/tools/sip-balancer/1.0.BETA4-SNAPSHOT/sip-balancer-1.0.BETA4-SNAPSHOT.jar" sourcepath="/SIP_BALANCER/src/main/java"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-application-router"/>
 	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.12/log4j-1.2.12.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-tomcat-jboss4"/>
