--- a/sip-servlets-test-suite/applications/pom.xml
+++ b/sip-servlets-test-suite/applications/pom.xml
@@ -40,6 +40,7 @@
 		<module>replaces-sip-servlet</module>
 		<module>no-app-name-servlet</module>
 		<module>no-main-servlet-app</module>
+		<module>same-instance-servlet</module>
 	</modules>
 	<dependencies>
 		<!-- test dependencies -->
