Sip Phone plugin updates
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5415 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-eclipse-plugin/sip-phone-plugin/plugin.xml
+++ b/sip-servlets-eclipse-plugin/sip-phone-plugin/plugin.xml
@@ -9,7 +9,7 @@
             id="sip_phone_plugin">
       </category>
       <view
-            name="SipPhone"
+            name="SIP Phone"
             icon="icons/sample.gif"
             category="sip_phone_plugin"
             class="org.mobicents.sip.phone.views.SipPhoneView"
